# litellm-acp-router

./: .gitignore  AGENTS.md  README.md  litellm_config.example.yaml  pyproject.toml
litellm_acp_router/: __init__.py  binding.py  client.py  registry.py  router.py  router_handler.py  runtime.py  schemas.py  session_manager.py  utils.py
litellm_acp_router/adapters/: __init__.py  auggie.py  base.py  kimi.py  static.py
tests/: test_adapters.py  test_binding.py  test_client.py  test_runtime_stateful.py  test_session_manager.py
