[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "litellm-acp-router"
version = "0.1.0"
description = "LiteLLM custom provider for Agent Client Protocol agents."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "litellm[proxy]",
  "agent-client-protocol>=0.7.0",
]

[tool.setuptools]
packages = [
  "litellm_acp_router",
  "litellm_acp_router.adapters",
]
